--- a/Coloresprueba.html
+++ b/Coloresprueba.html
@@ -6,8 +6,8 @@
     <body text="blue" bgcolor="green">
         <p>Use different color names for body and table ans see the result.</p>
         <table bgcolor="black">
-            <tr>
-                <td>
+            <tr> <!-- Define una fila de celdas en una tabla, debe estar en un elemento table-->
+                <td><!-- Encierra un elemento-->
                     <font color="white">This text will appear white on black background.</font>
                 </td>
             </tr>
